Jump after measuring nearest object distance

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 	<title>test</title>
 </head>
 <body>
-<div>
+<!-- <div>
 	<div id="hello">
 		this is default text
 	</div>
-</div>
-<script type="text/javascript" src="js/main.js"></script>
+</div> -->
+<!-- <div id="newCanvasHolder"></div> -->
+<!-- <canvas id="mycanvas" width="200" height="200"></canvas> -->
+<!-- <script type="text/javascript" src="js/main.js"></script> -->
+<!-- <script type="text/javascript" src="js/canvas.js"></script> -->
+<canvas id="sceneCanvas" width="600" height="150"></canvas>
+<img src="images/scene.png" id="sceneImage" hidden="true">
+<script type="text/javascript">
+	// window.onload = function(){
+	// 	var canvas = document.getElementById("sceneCanvas");
+	// 	var context = canvas.getContext("2d");
+	// 	var image = document.getElementById("sceneImage");
+	// 	context.drawImage(image,0,0);
+	// }
+</script>
+<script type="text/javascript" src="js/findObject.js"></script>
 </body>
 </html>
